@@ -1,3 +1,10 @@
+2005-01-23  Bruno Haible  <bruno@clisp.org>
+
+	* compiler.lisp (test-argument-syntax): When NIL is passed instead
+	of a keyword, to a function expecting keyword arguments, signal it
+	and return NIL instead of STATIC-KEYS.
+	Found by Paul Dietz's ansi-tests test suite.
+
 2005-01-22  Bruno Haible  <bruno@clisp.org>
 
 	* compiler.lisp (c-GLOBAL-FUNCTION-CALL): Generate references to CAR,
